tests/fixtures/positive/supply-chain/apply-plugin-twice/build.gradle.kts
plugins {
    id("com.android.application")
    id("org.jetbrains.kotlin.android")
}

android {
    namespace = "com.example.app"
}

apply(plugin = "com.android.application")
