tests/fixtures/negative/release-engineering/build-config-debug-in-library/app/build.gradle.kts
plugins {
    id("com.android.application")
    id("org.jetbrains.kotlin.android")
}

android {
    defaultConfig {
        applicationId = "com.example.app"
    }
}
